# hackerexperience-rust

./: .dockerignore  .env.example  .env.production  .env.production.example  ACTUAL_VERIFICATION.md  ACTUAL_ZERO_HARDCODE_VERIFICATION.md  API_DOCUMENTATION.md  API_DOCUMENTATION_V2.md  ARCHITECTURE.md  COMPLETE_BACKEND_ANALYSIS.md  COMPLETE_FILE_MAPPING.md  COMPLETE_GENSERVER_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_PLAN.md  COMPLETE_PARITY_VERIFICATION.md  COMPREHENSIVE_1TO1_PARITY_ANALYSIS.md  COMPREHENSIVE_PERFORMANCE_REPORT.md  CONSOLIDATION_PLAN.md  CORRECTED_PARITY_ANALYSIS.md  CORRECTED_VERIFICATION.md  Cargo.toml  DATABASE_SCHEMA_PORTED.md  DEPENDENCY_MAPPING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DIRECTORY_MAPPING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  EXISTING_STRUCTURE_ANALYSIS.md  FINAL_FIX_STATUS.md  FINAL_PARITY_ANALYSIS.md  FINAL_PRODUCTION_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_VERIFICATION.md  FIXES_APPLIED.md  FIXES_APPLIED_VERIFICATION.md  GAMEPLAY_IMPLEMENTATION.md  GAME_MECHANICS_IMPLEMENTATION_REPORT.md  GAME_STATUS.md  GAME_SYSTEMS_DOCUMENTATION.md  (+85 more)
crates.backup/he-core/: Cargo.toml
crates.backup/he-core/src/: config.rs  cursor_pagination.rs  error.rs  lib.rs  pagination.rs
crates.backup/he-core/src/database/: mod.rs  pdo.rs
crates.backup/he-core/src/entities/: clan.rs  fame.rs  finances.rs  hardware.rs  list.rs  mission.rs  mod.rs  npc.rs  process.rs  ranking.rs  session.rs  software.rs  storyline.rs  user.rs  versioning.rs
crates.backup/he-core/src/security/: email_verification.rs  purifier.rs  remember_me.rs
crates.backup/he-core/src/utils/: images.rs  pagination.rs
crates.backup/he-database/: Cargo.toml
crates.backup/he-database-runtime/: Cargo.toml
crates.backup/he-database/src/: lib.rs  models.rs  queries.rs  queries_optimized.rs  redis_cache.rs  tests.rs
crates.backup/he-demo-server/: Cargo.toml
crates.backup/he-demo-server/src/: main.rs
crates.backup/he-game-mechanics/: Cargo.toml  README.md
crates.backup/he-game-mechanics/examples/: complete_game_simulation.rs
crates.backup/he-game-mechanics/src/: clan.rs  defense.rs  extended.rs  hacking.rs  lib.rs  utils.rs
crates.backup/he-game-mechanics/src/engine/: game_engine.rs
crates.backup/he-helix-process/: Cargo.toml
crates.backup/he-helix-process/src/: actors.rs  processable.rs
crates.backup/he-legacy-compat/: Cargo.toml
crates.backup/he-legacy-compat/src/: lib.rs  session.rs
crates.backup/he-legacy-compat/src/classes/: bcrypt.rs  clan.rs  forum.rs  mail.rs  npc.rs  system.rs
crates.backup/he-legacy-compat/src/pages/: ajax.rs  badge_config.rs  bitcoin.rs  certs.rs  changelog.rs  clan.rs  create_software.rs  finances.rs  hardware.rs  index.rs  internet.rs  list.rs  log_edit.rs  login.rs  logout.rs  mail.rs  news.rs  options.rs  premium.rs  profile.rs  register.rs  research_table.rs  reset.rs  reset_ip.rs  software.rs  stats.rs  university.rs  upload_image.rs
crates.backup/he-monitoring/: Cargo.toml
crates.backup/he-progression/: Cargo.toml
crates.backup/he-progression/src/: lib.rs  reputation.rs
crates.backup/he-vdp/: Cargo.toml
crates.backup/he-vdp/src/: lib.rs
crates/he-api/: Cargo.toml
crates/he-api/src/: config.rs  dashboard_router.rs  error.rs  game_server.rs  game_server_v2.rs  game_systems.rs  jwt_cache.rs  legacy_compat.rs  legacy_router.rs  lib.rs  main.rs  main_production.rs  middleware_stack.rs  plugins.rs  routes.rs  safe_resources.rs  secrets_manager.rs  templates.rs  tests.rs  websocket.rs  websocket_handler.rs
crates/he-api/src/handlers/: game.rs  hacking.rs  hardware.rs  mod.rs  progression.rs
crates/he-api/src/middleware/: auth.rs  csrf.rs  rate_limit.rs  versioning.rs  (+1 more)
crates/he-cache/: Cargo.toml
crates/he-cache/src/: l1_cache.rs  lib.rs
crates/he-core/: Cargo.toml
crates/he-core-process/: Cargo.toml
crates/he-core-process/src/: actors.rs  lib.rs  model.rs  query.rs  resources.rs  signals.rs  top.rs  types.rs
crates/he-core/src/: config.rs  cursor_pagination.rs  entity_core.rs  error.rs  id.rs  lib.rs  types.rs  validation.rs
crates/he-core/tests/: integration_tests.rs
he-database/: Cargo.toml
he-database/src/: config.rs  connection.rs  lib.rs  manager.rs  migrations.rs  models.rs  repository.rs
he-events/: Cargo.toml
he-events/src/: dispatcher.rs  event.rs  handler.rs  lib.rs  listenable.rs  loggable.rs  notificable.rs  publishable.rs  publisher.rs  replay.rs  state.rs  store.rs  stream.rs  subscriber.rs
he-helix-account/: Cargo.toml
he-helix-account/src/: actors.rs  lib.rs  models.rs
he-helix-balance/: Cargo.toml
he-helix-balance/src/: lib.rs  software.rs
he-helix-bank/: Cargo.toml
he-helix-bank/src/: actors.rs  lib.rs  models.rs
he-helix-cache/: Cargo.toml
he-helix-cache/src/: actions.rs  actors.rs  events.rs  lib.rs  models.rs  queries.rs  state.rs
he-helix-core/: Cargo.toml
he-helix-core/src/: actors.rs  distributed.rs  error.rs  events.rs  genserver.rs  hot_reload.rs  lib.rs  listener.rs  process.rs  process_cancel.rs  supervision.rs  supervisor.rs  types.rs  units.rs  utils.rs  validator.rs
he-helix-entity/: Cargo.toml
he-helix-entity/src/: actions.rs  actors.rs  events.rs  genserver.rs  lib.rs  models.rs  queries.rs
he-helix-factor/: Cargo.toml
he-helix-factor/src/: lib.rs
he-helix-hell/: Cargo.toml
he-helix-hell/src/: client_utils.rs  hell.rs  lib.rs  macros.rs  mix.rs  types.rs  utils.rs
he-helix-http/: Cargo.toml
he-helix-http/src/: auth.rs  lib.rs
he-helix-http/src/handlers/: cancel.rs
he-helix-notification/: Cargo.toml
he-helix-notification/src/: action.rs  event.rs  henforcer.rs  lib.rs  model.rs  public.rs  query.rs  supervisor.rs  websocket.rs
he-helix-notification/src/model/: code.rs  notification.rs
he-helix-security/: Cargo.toml
he-helix-security/src/: audit.rs  ddos.rs  encryption.rs  intrusion.rs  lib.rs
he-helix-story/: Cargo.toml
he-helix-story/src/: actions.rs  actors.rs  events.rs  genserver.rs  models.rs  queries.rs
he-helix-websocket-handlers/: Cargo.toml
he-helix-websocket-handlers/src/: lib.rs  session.rs
(+528 files in other folders)
