[workspace]
resolver = "2"
members = [
    "crates/he-admin",
    "crates/he-api", 
    "crates/he-auth",
    "crates/he-cli",
    "crates/he-core",
    "crates/he-cron",
    "crates/he-db",
    "crates/he-helix-compat",
    "crates/he-helix-server",
    "crates/he-helix-network",
    "crates/he-helix-software",
    "crates/he-helix-process",
    "crates/he-legacy-compat",
    "crates/he-processes",
    "crates/he-realtime",
    "he-helix-core",
    "he-database",
    "he-events",
    # New Helix modules
    "he-helix-log",
    "he-helix-cache",
    "he-helix-entity",
    "he-helix-account",
    "he-helix-story",
    "he-helix-universe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["HackerExperience Team"]
repository = "https://github.com/hackerexperience/helix-rust"

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Database and ORM
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Web and networking
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Actor system
actix = "0.13"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
envy = "0.4"

# Utilities
once_cell = "1.19"
lazy_static = "1.5"
dashmap = "6.0"

# Development dependencies
[workspace.dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"