[workspace]
resolver = "2"
members = [
    "crates/he-admin",
    "crates/he-api", 
    "crates/he-auth",
    "crates/he-cli",
    "crates/he-core",
    "crates/he-cron",
    "crates/he-db",
    "crates/he-demo-server",
    "crates/he-database-runtime",
    "crates/he-helix-compat",
    "crates/he-helix-server",
    "crates/he-helix-network",
    "crates/he-helix-software",
    "crates/he-helix-process",
    "crates/he-legacy-compat",
    "crates/he-processes",
    "crates/he-realtime",
    # Game mechanics engine
    "crates/he-game-mechanics",
    "he-helix-core",
    "he-database",
    "he-events",
    # New Helix modules
    "he-helix-log",
    "he-helix-cache",
    "he-helix-entity",
    "he-helix-account",
    "he-helix-story",
    "he-helix-universe",
    # Final batch of Helix modules
    "he-helix-henforcer",
    "he-helix-client",
    "he-helix-notification",
    "he-helix-http",
    "he-helix-websocket-handlers",
    "he-helix-factor",
    "he-helix-id",
    "he-helix-hell",
    "he-helix-balance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["HackerExperience Team"]
repository = "https://github.com/hackerexperience/helix-rust"

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Database and ORM
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Web framework and HTTP
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography and security
bcrypt = "0.15"
jwt = "0.16"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Networking
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Regex and validation
regex = "1.0"
validator = { version = "0.16", features = ["derive"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# File system utilities
tempfile = "3.0"

# WebSocket
tokio-tungstenite = "0.21"

# Compression
flate2 = "1.0"

# Testing utilities
mockall = "0.13"
tokio-test = "0.4"
proptest = "1.0"
pretty_assertions = "1.0"
criterion = "0.5"

# Benchmarking and additional utils
jsonwebtoken = "9.0"
toml = "0.8"
serial_test = "3.0"

# Additional utilities
once_cell = "1.19"
lazy_static = "1.4"
derive_more = "0.99"
bitflags = "2.0"
actix = "0.13"
actix-web = "4.0"
dashmap = "6.0"
enum_dispatch = "0.3"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1