[package]
name = "he-database"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
he-helix-core = { path = "../he-helix-core" }

# Database
sqlx = { workspace = true }
sea-orm = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
config = { workspace = true }

# Utilities
once_cell = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }