[package]
name = "he-helix-bank"
version = "0.1.0"
edition = "2021"

[dependencies]
he-helix-core = { path = "../he-helix-core" }
he-core = { path = "../crates/he-core" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
dashmap = "5.0"
validator = { version = "0.16", features = ["derive"] }
rand = "0.8"