[package]
name = "he-helix-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Internal dependencies
he-core = { path = "../he-core" }
he-network = { path = "../he-network" }
he-server = { path = "../he-server" }
he-software = { path = "../he-software" }