[package]
name = "he-helix-factor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
he-helix-core = { path = "../he-helix-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }