[package]
name = "he-helix-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
he-helix-core = { path = "../he-helix-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Auth dependencies
argon2 = "0.5"
jsonwebtoken = { workspace = true }
time = "0.3"
anyhow = "1.0"

# Web framework for handlers
actix-web = "4"
sqlx = { workspace = true }

# For middleware
futures-util = "0.3"