[package]
name = "he-helix-notification"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
he-helix-core = { path = "../he-helix-core" }
he-helix-henforcer = { path = "../he-helix-henforcer" }
he-events = { path = "../he-events" }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
once_cell = { workspace = true }
enum_dispatch = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }