[package]
name = "he-helix-websocket-handlers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
he-helix-core = { path = "../he-helix-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# WebSocket dependencies
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
futures-util = "0.3"