[package]
name = "he-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.0"
base64 = { workspace = true }
md5 = "0.7"
sha2 = "0.10"
bcrypt = "0.15"
tokio = { workspace = true }
validator = { workspace = true }
ammonia = "4.0"
once_cell = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Internal dependencies
he-helix-core = { path = "../../he-helix-core" }
