[package]
name = "he-game-mechanics"
version = "0.1.0"
edition = "2021"
description = "HackerExperience game mechanics engine with all algorithms, formulas, and business rules"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
uuid = { workspace = true }
rust_decimal = { version = "1.0", features = ["serde"] }
rust_decimal_macros = "1.0"

# Internal dependencies
he-core = { path = "../he-core" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "game_mechanics_benchmarks"
harness = false