[package]
name = "he-helix-process"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Helix Process Execution Engine - Rust implementation"

[dependencies]
# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true

# Actor system
actix.workspace = true

# Database and ORM
sqlx.workspace = true
sea-orm.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
once_cell.workspace = true
dashmap.workspace = true

# Internal dependencies
he-core = { path = "../he-core" }
he-db = { path = "../he-db" }
he-helix-compat = { path = "../he-helix-compat" }
he-helix-server = { path = "../he-helix-server" }
he-helix-network = { path = "../he-helix-network" }
he-helix-software = { path = "../he-helix-software" }

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true