[package]
name = "he-legacy-compat"
version = "0.1.0"
edition = "2021"
description = "Legacy PHP compatibility layer - 1:1 port of all PHP files"

[dependencies]
he-core = { path = "../he-core" }
he-db = { path = "../he-db" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
handlebars = "4.0"
bcrypt = "0.15"
regex = "1.0"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
base64 = { workspace = true }
async-trait = "0.1"
html-escape = "0.2"
md5 = "0.7"
once_cell = "1.19"
