[package]
name = "he-monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
# Metrics
prometheus = "0.13"
prometheus-hyper = "0.2"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }

# Error tracking
sentry = "0.35"
sentry-tracing = "0.35"
sentry-tower = { version = "0.35", features = ["http"] }

# HTTP
hyper = { version = "1", features = ["full"] }
tower = "0.5"

# Async
tokio = { version = "1", features = ["full"] }

# Time
chrono = "0.4"

# System metrics
sysinfo = "0.33"