[package]
name = "he-progression"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.32"
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }