[package]
name = "he-vdp"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["ssr"] }
leptos_meta = { version = "0.6", features = ["ssr"] }
leptos_router = { version = "0.6", features = ["ssr"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
http = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["ssr"]
ssr = []