[package]
name = "he-api"
version = "1.0.0"
edition = "2021"
authors = ["HackerExperience Team"]
description = "Production API server for HackerExperience - 100% Pure Rust"

[[bin]]
name = "he-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs"] }
hyper = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Internal crates
he-core = { path = "../he-core" }
he-auth = { path = "../he-auth" }
he-game-mechanics = { path = "../he-game-mechanics" }
he-db = { path = "../he-db" }

# Database
sqlx = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

# Environment
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"