[package]
name = "he-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "he-api"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["macros"] }
actix-cors = "0.6"
actix-web-actors = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { workspace = true, features = ["migrate", "macros"] }

# Our internal crates
he-helix-core = { path = "../../he-helix-core" }
he-helix-http = { path = "../../he-helix-http" }
he-helix-websocket-handlers = { path = "../../he-helix-websocket-handlers" }
he-helix-security = { path = "../../he-helix-security" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
env_logger = "0.10"

# Security
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }

# Utils
num_cpus = "1.16"
anyhow = "1.0"
futures-util = "0.3"
