[package]
name = "he-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "json"] }
bb8 = "0.8"
bb8-redis = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Metrics
prometheus = "0.13"